--- a/public/index.html
+++ b/public/index.html
@@ -6,6 +6,7 @@
         <title>Foodie Landing Page </title>
         <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@24,400,0,0" />
         <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@200;300;400;500;600;700;800&family=Reem+Kufi&display=swap" rel="stylesheet">
+        <script src="https://kit.fontawesome.com/205bdd7425.js" crossorigin="anonymous"></script>
 </head>
 <body>
     <div id="root"></div>
